--- a/index.html
+++ b/index.html
@@ -300,21 +300,19 @@
             <div class="footer-section">
                 <h3>联系我们</h3>
                 <div class="contact-info">
-                    <p>邮箱：contact@humanizador.pro</p>
-                    <p>微信：humanizador-ai</p>
+                    <p>邮箱：betterdallen@gmail.com</p>
                 </div>
             </div>
             <div class="footer-section">
                 <h3>使用条款</h3>
                 <ul class="footer-links">
-                    <li><a href="#">服务条款</a></li>
-                    <li><a href="#">隐私政策</a></li>
-                    <li><a href="#">免责声明</a></li>
+                    <li><a href="terms.html">服务条款</a></li>
+                    <li><a href="privacy.html">隐私政策</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 humanizador de ia. All rights reserved.</p>
+            <p>&copy; 2025 humanizador de ia. All rights reserved.</p>
         </div>
     </footer>
 
