--- a/terms.html
+++ b/terms.html
@@ -189,5 +189,19 @@
             <p>&copy; 2025 humanizador de ia. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="script.js"></script>
+
+    <div style="display:none">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FBWEWVL924"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-FBWEWVL924');
+    </script>
+    </div>
 </body>
 </html> 
