页面改为西班牙语

--- a/terms.html
+++ b/terms.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>服务条款 - humanizador de ia</title>
+    <title>Términos de Servicio - humanizador de ia</title>
     <link rel="icon" type="image/png" href="logo-placeholder.png">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -65,98 +65,98 @@
 
     <main>
         <div class="terms-content">
-            <h1>服务条款</h1>
+            <h1>Términos de Servicio</h1>
             
-            <p>欢迎使用 humanizador de ia（以下简称"我们"、"本网站"或"humanizadordeia.top"）。请仔细阅读以下服务条款，使用我们的服务即表示您同意接受这些条款的约束。</p>
+            <p>Bienvenido a humanizador de ia (en adelante "nosotros", "nuestro sitio web" o "humanizadordeia.top"). Por favor, lee atentamente los siguientes términos de servicio. Al utilizar nuestros servicios, aceptas estar sujeto a estos términos.</p>
 
-            <h2>1. 服务说明</h2>
-            <p>humanizador de ia 提供AI文本人性化处理服务，帮助用户将AI生成的内容转换为更自然、更人性化的文本。我们的服务包括但不限于：</p>
+            <h2>1. Descripción del Servicio</h2>
+            <p>humanizador de ia ofrece servicios de humanización de texto AI, ayudando a los usuarios a convertir contenido generado por IA en texto más natural y humanizado. Nuestros servicios incluyen, pero no se limitan a:</p>
             <ul>
-                <li>AI文本人性化转换</li>
-                <li>多种文本处理模式</li>
-                <li>绕过AI检测功能</li>
-                <li>文本优化建议</li>
+                <li>Conversión de texto AI a texto humanizado</li>
+                <li>Múltiples modos de procesamiento de texto</li>
+                <li>Evasión de detección de IA</li>
+                <li>Sugerencias de optimización de texto</li>
             </ul>
 
-            <h2>2. 使用条件</h2>
-            <p>使用我们的服务，您需要：</p>
+            <h2>2. Condiciones de Uso</h2>
+            <p>Para utilizar nuestros servicios, debes:</p>
             <ul>
-                <li>确保您有权使用和处理提交的内容</li>
-                <li>遵守所有适用的法律法规</li>
-                <li>不得滥用或干扰我们的服务</li>
-                <li>不得规避我们的安全措施</li>
+                <li>Asegurarte de tener derecho a usar y procesar el contenido enviado</li>
+                <li>Cumplir con todas las leyes y regulaciones aplicables</li>
+                <li>No abusar ni interferir con nuestros servicios</li>
+                <li>No eludir nuestras medidas de seguridad</li>
             </ul>
 
-            <h2>3. 用户责任</h2>
-            <p>作为服务用户，您同意：</p>
+            <h2>3. Responsabilidades del Usuario</h2>
+            <p>Como usuario del servicio, aceptas:</p>
             <ul>
-                <li>提供真实、准确的信息</li>
-                <li>保护您的账户安全（如适用）</li>
-                <li>对您的行为负责</li>
-                <li>不得从事任何违法或有害活动</li>
+                <li>Proporcionar información verdadera y precisa</li>
+                <li>Proteger la seguridad de tu cuenta (si aplica)</li>
+                <li>Ser responsable de tus acciones</li>
+                <li>No participar en actividades ilegales o dañinas</li>
             </ul>
 
-            <h2>4. 知识产权</h2>
-            <p>关于知识产权，请注意：</p>
+            <h2>4. Propiedad Intelectual</h2>
+            <p>Respecto a la propiedad intelectual, ten en cuenta:</p>
             <ul>
-                <li>网站内容和服务的所有权利归我们所有</li>
-                <li>用户保留其原创内容的权利</li>
-                <li>转换后的内容版权归属用户</li>
-                <li>禁止未经授权使用我们的知识产权</li>
+                <li>Todos los derechos del sitio web y servicios nos pertenecen</li>
+                <li>Los usuarios mantienen los derechos de su contenido original</li>
+                <li>Los derechos de autor del contenido convertido pertenecen al usuario</li>
+                <li>Está prohibido el uso no autorizado de nuestra propiedad intelectual</li>
             </ul>
 
-            <h2>5. 服务限制</h2>
-            <p>我们保留以下权利：</p>
+            <h2>5. Limitaciones del Servicio</h2>
+            <p>Nos reservamos el derecho a:</p>
             <ul>
-                <li>限制某些用户的访问权限</li>
-                <li>修改或暂停服务</li>
-                <li>删除违规内容</li>
-                <li>更新服务功能和政策</li>
+                <li>Limitar el acceso de ciertos usuarios</li>
+                <li>Modificar o suspender servicios</li>
+                <li>Eliminar contenido que viole las normas</li>
+                <li>Actualizar funciones y políticas del servicio</li>
             </ul>
 
-            <h2>6. 免责声明</h2>
-            <p>我们的免责范围包括：</p>
+            <h2>6. Descargo de Responsabilidad</h2>
+            <p>Nuestro descargo de responsabilidad incluye:</p>
             <ul>
-                <li>服务中断或技术问题</li>
-                <li>内容准确性和完整性</li>
-                <li>用户使用结果</li>
-                <li>第三方链接和服务</li>
+                <li>Interrupciones del servicio o problemas técnicos</li>
+                <li>Precisión y completitud del contenido</li>
+                <li>Resultados del uso por parte del usuario</li>
+                <li>Enlaces y servicios de terceros</li>
             </ul>
 
-            <h2>7. 服务变更</h2>
-            <p>我们可能会：</p>
+            <h2>7. Cambios en el Servicio</h2>
+            <p>Podemos:</p>
             <ul>
-                <li>随时修改服务内容和功能</li>
-                <li>调整服务价格（如适用）</li>
-                <li>更新服务条款</li>
-                <li>暂停或终止部分服务</li>
+                <li>Modificar el contenido y funciones del servicio en cualquier momento</li>
+                <li>Ajustar los precios del servicio (si aplica)</li>
+                <li>Actualizar los términos de servicio</li>
+                <li>Suspender o terminar ciertos servicios</li>
             </ul>
 
-            <h2>8. 隐私保护</h2>
-            <p>我们重视您的隐私：</p>
+            <h2>8. Protección de Privacidad</h2>
+            <p>Valoramos tu privacidad:</p>
             <ul>
-                <li>遵守隐私政策保护用户数据</li>
-                <li>采取安全措施保护信息</li>
-                <li>不会未经授权分享用户信息</li>
-                <li>定期更新安全措施</li>
+                <li>Seguimos la política de privacidad para proteger los datos del usuario</li>
+                <li>Implementamos medidas de seguridad para proteger la información</li>
+                <li>No compartimos información del usuario sin autorización</li>
+                <li>Actualizamos regularmente nuestras medidas de seguridad</li>
             </ul>
 
-            <h2>9. 争议解决</h2>
-            <p>如遇争议：</p>
+            <h2>9. Resolución de Disputas</h2>
+            <p>En caso de disputas:</p>
             <ul>
-                <li>优先通过友好协商解决</li>
-                <li>适用中华人民共和国法律</li>
-                <li>通过有管辖权的法院解决</li>
+                <li>Se resolverán primero mediante negociación amistosa</li>
+                <li>Se aplican las leyes de la República Popular China</li>
+                <li>Se resolverán a través de tribunales con jurisdicción</li>
             </ul>
 
-            <h2>10. 联系方式</h2>
-            <p>如有任何问题或建议，请联系我们：</p>
+            <h2>10. Contacto</h2>
+            <p>Para cualquier pregunta o sugerencia, contáctanos:</p>
             <ul>
-                <li>邮箱：betterdallen@gmail.com</li>
-                <li>网站：https://humanizadordeia.top</li>
+                <li>Email: betterdallen@gmail.com</li>
+                <li>Sitio web: https://humanizadordeia.top</li>
             </ul>
 
-            <p class="last-updated">最后更新时间：2025年1月</p>
+            <p class="last-updated">Última actualización: Enero 2025</p>
         </div>
     </main>
 
@@ -168,25 +168,25 @@
                     <span>humanizador de ia</span>
                 </div>
                 <p class="footer-description">
-                    使用最智能的AI人性化工具，将AI生成的内容转换为自然、人性化的文本
+                    Utiliza la herramienta de IA más inteligente para transformar el contenido generado por IA en texto natural y humanizado
                 </p>
             </div>
             <div class="footer-section">
-                <h3>联系我们</h3>
+                <h3>Contáctanos</h3>
                 <div class="contact-info">
-                    <p>邮箱：betterdallen@gmail.com</p>
+                    <p>Email: betterdallen@gmail.com</p>
                 </div>
             </div>
             <div class="footer-section">
-                <h3>使用条款</h3>
+                <h3>Términos de Uso</h3>
                 <ul class="footer-links">
-                    <li><a href="terms.html">服务条款</a></li>
-                    <li><a href="privacy.html">隐私政策</a></li>
+                    <li><a href="terms.html">Términos de Servicio</a></li>
+                    <li><a href="privacy.html">Política de Privacidad</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 humanizador de ia. All rights reserved.</p>
+            <p>&copy; 2025 humanizador de ia. Todos los derechos reservados.</p>
         </div>
     </footer>
 
