--- a/privacy.html
+++ b/privacy.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>隐私政策 - humanizador de ia</title>
+    <title>Política de Privacidad - humanizador de ia</title>
     <link rel="icon" type="image/png" href="logo-placeholder.png">
     <link rel="stylesheet" href="styles.css">
     <style>
@@ -65,74 +65,74 @@
 
     <main>
         <div class="privacy-content">
-            <h1>隐私政策</h1>
+            <h1>Política de Privacidad</h1>
             
-            <p>欢迎访问 humanizador de ia（以下简称"我们"、"本网站"或"humanizadordeia.top"）。本隐私政策旨在帮助您了解我们如何收集、使用和保护您的个人信息。使用我们的服务即表示您同意本隐私政策中描述的数据实践。</p>
+            <p>Bienvenido a humanizador de ia (en adelante "nosotros", "nuestro sitio web" o "humanizadordeia.top"). Esta política de privacidad está diseñada para ayudarte a entender cómo recopilamos, utilizamos y protegemos tu información personal. Al utilizar nuestros servicios, aceptas las prácticas de datos descritas en esta política de privacidad.</p>
 
-            <h2>1. 信息收集</h2>
-            <p>我们收集的信息类型包括：</p>
+            <h2>1. Recopilación de Información</h2>
+            <p>Los tipos de información que recopilamos incluyen:</p>
             <ul>
-                <li>您提供给我们的文本内容</li>
-                <li>使用服务时自动生成的技术数据（如IP地址、浏览器类型）</li>
-                <li>网站使用数据（如访问时间、使用频率）</li>
+                <li>El contenido de texto que nos proporcionas</li>
+                <li>Datos técnicos generados automáticamente durante el uso del servicio (como dirección IP, tipo de navegador)</li>
+                <li>Datos de uso del sitio web (como tiempo de visita, frecuencia de uso)</li>
             </ul>
 
-            <h2>2. 信息使用</h2>
-            <p>我们使用收集的信息：</p>
+            <h2>2. Uso de la Información</h2>
+            <p>Utilizamos la información recopilada para:</p>
             <ul>
-                <li>提供、维护和改进我们的服务</li>
-                <li>处理和优化您的文本内容</li>
-                <li>防止滥用和维护服务安全</li>
-                <li>分析服务使用情况以改进用户体验</li>
+                <li>Proporcionar, mantener y mejorar nuestros servicios</li>
+                <li>Procesar y optimizar tu contenido de texto</li>
+                <li>Prevenir el abuso y mantener la seguridad del servicio</li>
+                <li>Analizar el uso del servicio para mejorar la experiencia del usuario</li>
             </ul>
 
-            <h2>3. 信息共享</h2>
-            <p>我们不会出售或出租您的个人信息。仅在以下情况下可能会共享信息：</p>
+            <h2>3. Compartir Información</h2>
+            <p>No vendemos ni alquilamos tu información personal. Solo compartimos información en las siguientes circunstancias:</p>
             <ul>
-                <li>经您明确同意</li>
-                <li>法律要求或政府请求</li>
-                <li>保护我们的合法权益</li>
+                <li>Con tu consentimiento explícito</li>
+                <li>Cuando lo requiera la ley o una solicitud gubernamental</li>
+                <li>Para proteger nuestros intereses legítimos</li>
             </ul>
 
-            <h2>4. 数据安全</h2>
-            <p>我们采取合理的安全措施保护您的信息：</p>
+            <h2>4. Seguridad de Datos</h2>
+            <p>Tomamos medidas de seguridad razonables para proteger tu información:</p>
             <ul>
-                <li>使用加密技术保护数据传输</li>
-                <li>定期审查信息收集、存储和处理实践</li>
-                <li>限制员工访问个人信息的权限</li>
+                <li>Utilizamos tecnología de encriptación para proteger la transmisión de datos</li>
+                <li>Revisamos regularmente nuestras prácticas de recopilación, almacenamiento y procesamiento</li>
+                <li>Limitamos el acceso del personal a la información personal</li>
             </ul>
 
-            <h2>5. Cookie使用</h2>
-            <p>我们使用Cookie和类似技术来：</p>
+            <h2>5. Uso de Cookies</h2>
+            <p>Utilizamos cookies y tecnologías similares para:</p>
             <ul>
-                <li>记住您的使用偏好</li>
-                <li>理解和保存您的使用习惯</li>
-                <li>监控网站性能</li>
+                <li>Recordar tus preferencias de uso</li>
+                <li>Entender y guardar tus hábitos de uso</li>
+                <li>Monitorear el rendimiento del sitio web</li>
             </ul>
 
-            <h2>6. 用户权利</h2>
-            <p>您对自己的个人信息拥有以下权利：</p>
+            <h2>6. Derechos del Usuario</h2>
+            <p>Tienes los siguientes derechos sobre tu información personal:</p>
             <ul>
-                <li>访问您的个人信息</li>
-                <li>更正不准确的信息</li>
-                <li>要求删除个人信息</li>
-                <li>反对或限制信息处理</li>
+                <li>Acceder a tu información personal</li>
+                <li>Corregir información inexacta</li>
+                <li>Solicitar la eliminación de información personal</li>
+                <li>Oponerte o limitar el procesamiento de información</li>
             </ul>
 
-            <h2>7. 儿童隐私</h2>
-            <p>我们的服务不面向13岁以下儿童。如果发现误收集了儿童信息，我们会立即删除。</p>
+            <h2>7. Privacidad de Menores</h2>
+            <p>Nuestros servicios no están dirigidos a menores de 13 años. Si descubrimos que hemos recopilado información de menores por error, la eliminaremos inmediatamente.</p>
 
-            <h2>8. 隐私政策更新</h2>
-            <p>我们可能会更新本隐私政策。更新时会在网站上发布通知，继续使用我们的服务即表示您同意新的隐私政策。</p>
+            <h2>8. Actualizaciones de la Política</h2>
+            <p>Podemos actualizar esta política de privacidad. Cuando lo hagamos, publicaremos un aviso en el sitio web. Continuar usando nuestros servicios significa que aceptas la nueva política de privacidad.</p>
 
-            <h2>9. 联系我们</h2>
-            <p>如果您对本隐私政策有任何疑问或建议，请通过以下方式联系我们：</p>
+            <h2>9. Contáctanos</h2>
+            <p>Si tienes preguntas o sugerencias sobre esta política de privacidad, contáctanos a través de:</p>
             <ul>
-                <li>邮箱：betterdallen@gmail.com</li>
-                <li>网站：https://humanizadordeia.top</li>
+                <li>Email: betterdallen@gmail.com</li>
+                <li>Sitio web: https://humanizadordeia.top</li>
             </ul>
 
-            <p class="last-updated">最后更新时间：2025年1月</p>
+            <p class="last-updated">Última actualización: Enero 2025</p>
         </div>
     </main>
 
@@ -144,25 +144,25 @@
                     <span>humanizador de ia</span>
                 </div>
                 <p class="footer-description">
-                    使用最智能的AI人性化工具，将AI生成的内容转换为自然、人性化的文本
+                    Utiliza la herramienta de IA más inteligente para transformar el contenido generado por IA en texto natural y humanizado
                 </p>
             </div>
             <div class="footer-section">
-                <h3>联系我们</h3>
+                <h3>Contáctanos</h3>
                 <div class="contact-info">
-                    <p>邮箱：betterdallen@gmail.com</p>
+                    <p>Email: betterdallen@gmail.com</p>
                 </div>
             </div>
             <div class="footer-section">
-                <h3>使用条款</h3>
+                <h3>Términos de Uso</h3>
                 <ul class="footer-links">
-                    <li><a href="terms.html">服务条款</a></li>
-                    <li><a href="privacy.html">隐私政策</a></li>
+                    <li><a href="terms.html">Términos de Servicio</a></li>
+                    <li><a href="privacy.html">Política de Privacidad</a></li>
                 </ul>
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 humanizador de ia. All rights reserved.</p>
+            <p>&copy; 2025 humanizador de ia. Todos los derechos reservados.</p>
         </div>
     </footer>
 
