Add Canonical URL

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="humanizador de ia - La herramienta líder para humanizar textos generados por IA. Convierta contenido AI en texto natural y fluido.">
     <meta name="keywords" content="humanizador de ia, humanización de texto AI, convertidor de texto AI, detector de IA, contenido natural">
+    <link rel="canonical" href="https://humanizadordeia.top/" />
     <title>humanizador de ia - Herramienta de Humanización de Textos AI</title>
     <link rel="icon" type="image/png" href="logo-placeholder.png">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -118,7 +119,7 @@
                 <div class="steps-container">
                     <p>Use humanizador de ia para humanizar fácilmente textos AI de forma gratuita siguiendo estos simples pasos:</p>
                     <ol>
-                        <li>Visite https://www.humanizador.pro en su navegador. Nuestra herramienta es compatible con todos los navegadores.</li>
+                        <li>Visite https://humanizadordeia.top/ en su navegador. Nuestra herramienta es compatible con todos los navegadores.</li>
                         <li>Ingrese o pegue el texto generado por IA en el área designada.</li>
                         <li>Complete el captcha para confirmar que es un usuario humano.</li>
                         <li>Haga clic en el botón "Convertir" para iniciar la transformación. Esto puede tomar un momento, por favor sea paciente.</li>
