--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="humanizador de ia, humanización de texto AI, convertidor de texto AI, detector de IA, contenido natural">
     <link rel="canonical" href="https://humanizadordeia.top/" />
     <title>humanizador de ia - Herramienta de Humanización de Textos AI</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/logo-placeholder.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="apple-touch-icon" href="logo-placeholder.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
