--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="humanizador de ia - La herramienta líder para humanizar textos generados por IA. Convierta contenido AI en texto natural y fluido.">
     <meta name="keywords" content="humanizador de ia, humanización de texto AI, convertidor de texto AI, detector de IA, contenido natural">
     <link rel="canonical" href="https://humanizadordeia.top/" />
@@ -10,6 +10,10 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="apple-touch-icon" href="logo-placeholder.png">
     <link rel="stylesheet" href="styles.css">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
 </head>
 <body>
     <header>
