--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
         <section class="seo-content">
             <div class="seo-section">
-                <h2>Use humanizador de ia Gratis</h2>
+                <h2>Humanizador de ia Gratis</h2>
                 <p class="highlight-text">Utilice nuestra herramienta de humanización AI completamente gratis y evite fácilmente todos los detectores de IA, incluyendo Originality.ai, GPTZero, Turnitin y más.</p>
             </div>
 
@@ -114,7 +114,7 @@
             </div>
 
             <div class="seo-section">
-                <h2>Entendiendo la Humanización de Textos AI</h2>
+                <h2>Humanización de Textos ia</h2>
                 <p>La humanización de textos AI es el arte de optimizar el contenido generado por IA para que sea más natural y cercano a los hábitos de lectura humanos. Esta transformación asegura que el contenido sea atractivo, relevante y claro, eliminando cualquier característica robótica. La humanización de textos AI incluye varios elementos como el uso natural del lenguaje, capacidad de empatía, personalización, interactividad, simplicidad y sensibilidad cultural, todo lo cual contribuye a convertir el texto AI en contenido natural y humanizado.</p>
             </div>
 
